--- a/x360ce.App.Beta/app.config
+++ b/x360ce.App.Beta/app.config
@@ -16,7 +16,7 @@
       <setting name="ExcludeSupplementalDevices" serializeAs="String">
         <value>False</value>
       </setting>
-      <setting name="ExcludeVirualDevices" serializeAs="String">
+      <setting name="ExcludeVirtualDevices" serializeAs="String">
         <value>False</value>
       </setting>
     </x360ce.App.Properties.Settings>
