Remove unfinished feature from current release. Rename 'Game' class to 'UserGame' in order to indicate user ownership.

--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -136,7 +136,7 @@
     <Compile Include="Common\WebServiceClient.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Data\Game.cs" />
+    <Compile Include="Data\UserGame.cs" />
     <Compile Include="Data\PadSetting.cs" />
     <Compile Include="Data\Program.cs" />
     <Compile Include="Data\UserController.cs" />
