--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -139,7 +139,7 @@
     <Compile Include="Data\UserGame.cs" />
     <Compile Include="Data\PadSetting.cs" />
     <Compile Include="Data\Program.cs" />
-    <Compile Include="Data\UserController.cs" />
+    <Compile Include="Data\UserDevice.cs" />
     <Compile Include="Data\Vendor.cs" />
     <Compile Include="Data\x360ceModel.Designer.cs">
       <AutoGen>True</AutoGen>
