--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Common\CloudCommand.cs" />
     <Compile Include="Common\CloudResults.cs" />
     <Compile Include="Common\EngineHelper.Data.cs" />
+    <Compile Include="Common\CloudKey.cs" />
     <Compile Include="Common\Enum\DInputMask.cs" />
     <Compile Include="Common\Enum\EffectDirection.cs" />
     <Compile Include="Common\Enum\EnabledState.cs" />
@@ -234,6 +235,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="JocysCom\Security\Data\User.cs" />
+    <Compile Include="JocysCom\Security\Rijndael.cs" />
     <Compile Include="JocysCom\Security\TokenHelper.cs" />
     <Compile Include="JocysCom\Security\ValidationField.cs" />
     <Compile Include="JocysCom\Security\Encryption.cs" />
