--- a/x360ce.App.Beta/x360ce.App.Beta.csproj
+++ b/x360ce.App.Beta/x360ce.App.Beta.csproj
@@ -363,6 +363,12 @@
     <Compile Include="Controls\GamesUserControl.Designer.cs">
       <DependentUpon>GamesUserControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\PromptForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\PromptForm.Designer.cs">
+      <DependentUpon>PromptForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\WebBrowserForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -442,6 +448,9 @@
     <EmbeddedResource Include="Controls\GamesUserControl.resx">
       <DependentUpon>GamesUserControl.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\PromptForm.resx">
+      <DependentUpon>PromptForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\WebBrowserForm.resx">
       <DependentUpon>WebBrowserForm.cs</DependentUpon>
@@ -629,6 +638,7 @@
     <None Include="Images\map_to_16x16.png" />
     <None Include="Images\cloud_computing_upload_16x16.png" />
     <None Include="Images\cloud_computing_download_16x16.png" />
+    <None Include="Images\edit_note_16x16.png" />
     <Content Include="Images\tip_24x24.png" />
     <None Include="Images\update_16x16.png" />
     <Content Include="Presets\ReadMe.txt" />
