--- a/x360ce.App.Beta/x360ce.App.Beta.csproj
+++ b/x360ce.App.Beta/x360ce.App.Beta.csproj
@@ -263,6 +263,12 @@
     <Compile Include="Controls\PresetsGridUserControl.Designer.cs">
       <DependentUpon>PresetsGridUserControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\ProgramsGridUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\ProgramsGridUserControl.Designer.cs">
+      <DependentUpon>ProgramsGridUserControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\SettingsGridUserControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -375,11 +381,11 @@
     <Compile Include="Controls\PadControl.Designer.cs">
       <DependentUpon>PadControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="Controls\GamesUserControl.cs">
+    <Compile Include="Controls\GamesGridUserControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Controls\GamesUserControl.Designer.cs">
-      <DependentUpon>GamesUserControl.cs</DependentUpon>
+    <Compile Include="Controls\GamesGridUserControl.Designer.cs">
+      <DependentUpon>GamesGridUserControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\PromptForm.cs">
       <SubType>Form</SubType>
@@ -424,6 +430,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\PresetsGridUserControl.resx">
       <DependentUpon>PresetsGridUserControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\ProgramsGridUserControl.resx">
+      <DependentUpon>ProgramsGridUserControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\SettingsGridUserControl.resx">
       <DependentUpon>SettingsGridUserControl.cs</DependentUpon>
@@ -472,8 +481,8 @@
     <EmbeddedResource Include="Controls\PadControl.resx">
       <DependentUpon>PadControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Controls\GamesUserControl.resx">
-      <DependentUpon>GamesUserControl.cs</DependentUpon>
+    <EmbeddedResource Include="Controls\GamesGridUserControl.resx">
+      <DependentUpon>GamesGridUserControl.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\PromptForm.resx">
