INI validation and settings saving.

--- a/x360ce.App.Beta/x360ce.App.Beta.csproj
+++ b/x360ce.App.Beta/x360ce.App.Beta.csproj
@@ -247,6 +247,7 @@
     <Compile Include="Common\SettingsManager.Events.cs" />
     <Compile Include="Common\SettingsManager.INI.cs" />
     <Compile Include="Common\SettingName.cs" />
+    <Compile Include="Common\SettingsManager.Validate.cs" />
     <Compile Include="Common\SettingsManager.XML.cs" />
     <Compile Include="Common\TaskName.cs" />
     <Compile Include="Common\SettingType.cs" />
