--- a/x360ce.Web/Web.config
+++ b/x360ce.Web/Web.config
@@ -139,12 +139,12 @@
 		<rewrite>
 			<rules>
 				<clear />
-				<rule name="To http://www" stopProcessing="true">
+				<rule name="To www" stopProcessing="true">
 					<match url="(.*)" />
 					<conditions logicalGrouping="MatchAll">
-						<add input="{HTTP_HOST}" pattern="^[a-z0-9]+\.(lt|com|eu)$" />
+						<add input="{HTTP_HOST}" pattern="^[a-z]+\.(co\.uk|lt|com|eu)$" />
 					</conditions>
-					<action type="Redirect" url="http://www.{HTTP_HOST}/{R:1}" redirectType="Permanent" />
+					<action type="Redirect" url="{MapSSL:{HTTPS}}www.{HTTP_HOST}/{R:1}" redirectType="Permanent" />
 				</rule>
 				<rule name="To http://www.x360ce.com" stopProcessing="true">
 					<match url="(.*)" />
@@ -173,6 +173,12 @@
 				  <action type="Redirect" url="https://github.com/x360ce/x360ce" redirectType="Permanent" />
 				</rule>-->
 			</rules>
+			<rewriteMaps>
+				<rewriteMap name="MapSSL" defaultValue="OFF">
+					<add key="ON" value="https://" />
+					<add key="OFF" value="http://" />
+				</rewriteMap>
+			</rewriteMaps>
 		</rewrite>
 		<validation validateIntegratedModeConfiguration="false" />
 	</system.webServer>
