--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Common\Enum\XInputMask.cs" />
     <Compile Include="Common\EngineHelper.cs" />
     <Compile Include="Common\GameDatabaseManager.cs" />
+    <Compile Include="Common\IChecksum.cs" />
     <Compile Include="Common\IDisplayName.cs" />
     <Compile Include="Common\Ini.cs" />
     <Compile Include="Common\IWebService.cs" />
@@ -370,9 +371,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  	<Target Name="PopulateEmbeddedFiles"
-          AfterTargets="BeforeCompile"
-          BeforeTargets="CoreCompile">
+  <Target Name="PopulateEmbeddedFiles" AfterTargets="BeforeCompile" BeforeTargets="CoreCompile">
     <ItemGroup>
       <EmbeddedFiles Include="@(Compile);@(AdditionalFiles)" />
     </ItemGroup>
