--- a/x360ce.App/x360ce.App.csproj
+++ b/x360ce.App/x360ce.App.csproj
@@ -573,9 +573,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-	<Target Name="PopulateEmbeddedFiles"
-          AfterTargets="BeforeCompile"
-          BeforeTargets="CoreCompile">
+  <Target Name="PopulateEmbeddedFiles" AfterTargets="BeforeCompile" BeforeTargets="CoreCompile">
     <ItemGroup>
       <EmbeddedFiles Include="@(Compile);@(AdditionalFiles)" />
     </ItemGroup>
