--- a/x360ce.Web/x360ce.Web.csproj
+++ b/x360ce.Web/x360ce.Web.csproj
@@ -25,6 +25,7 @@
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
     <UseGlobalApplicationHostFile />
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -140,6 +141,11 @@
     <Content Include="WebServices\x360ce.asmx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\DatabaseHelper.cs" />
+    <Compile Include="Common\DatabaseHelper.UserComputers.cs" />
+    <Compile Include="Common\DatabaseHelper.UserDevice.cs" />
+    <Compile Include="Common\DatabaseHelper.UserGame.cs" />
+    <Compile Include="Common\DatabaseHelper.UserInstances.cs" />
     <Compile Include="Controls\ControllersChartControl.ascx.cs">
       <DependentUpon>ControllersChartControl.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
