--- a/x360ce.App.Beta/x360ce.App.Beta.csproj
+++ b/x360ce.App.Beta/x360ce.App.Beta.csproj
@@ -238,6 +238,9 @@
     <Compile Include="Common\DeadZoneControlsLink.cs" />
     <Compile Include="Common\DeviceObjectItem.cs" />
     <Compile Include="Common\DirectInputState.cs" />
+    <Compile Include="Common\Downloader.cs" />
+    <Compile Include="Common\DownloaderEventArgs.cs" />
+    <Compile Include="Common\DownloaderParams.cs" />
     <Compile Include="Common\Extensions.cs" />
     <Compile Include="Common\HookMode.cs" />
     <Compile Include="Common\ForceFeedBackType.cs" />
